[gd_scene load_steps=14 format=3 uid="uid://b8tob17r25rn8"]

[ext_resource type="Script" path="res://scenes/levels/level.gd" id="1_fcpeo"]
[ext_resource type="PackedScene" uid="uid://bm1nb1jtvuswm" path="res://scenes/player/player.tscn" id="1_hdqui"]
[ext_resource type="Texture2D" uid="uid://ban060ia02tg4" path="res://sprites/backgrounds/backgrounddetailed2.png" id="2_yf11f"]
[ext_resource type="PackedScene" uid="uid://b5enn5xcl1fj6" path="res://scenes/objects/wall.tscn" id="3_8wdxp"]
[ext_resource type="PackedScene" uid="uid://bdgbo4ygsswa0" path="res://scenes/enemies/enemy functionality/enemy_spawn_point.tscn" id="3_31end"]
[ext_resource type="PackedScene" uid="uid://bygcxwv8l0knl" path="res://scenes/enemies/enemy functionality/enemy_spawn_master.tscn" id="3_ftial"]
[ext_resource type="PackedScene" uid="uid://cq21w4w0f54f0" path="res://scenes/ui/game_over_screen.tscn" id="6_13elb"]
[ext_resource type="PackedScene" uid="uid://clmbuodvsffjc" path="res://scenes/enemies/enemy functionality/enemy_collection.tscn" id="6_bw2uf"]
[ext_resource type="PackedScene" uid="uid://gruqqf3514t4" path="res://scenes/objects/tree.tscn" id="8_mk5fd"]
[ext_resource type="PackedScene" uid="uid://bjjqcnkialuxp" path="res://scenes/objects/palm_tree.tscn" id="9_3yjup"]
[ext_resource type="PackedScene" uid="uid://bxid7wujc6wuw" path="res://scenes/objects/bush.tscn" id="9_6d12y"]
[ext_resource type="AudioStream" uid="uid://drnpyv3uoioh7" path="res://music/Cruising for Goblins.mp3" id="12_xqn57"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_gubfn"]
vertices = PackedVector2Array(1521, -1309, 1491, 1046, 1378, 342, 1115, 267, -316, -148, -315, -279, 701, -360, 887, -322, 1204, 203, 763, -931, 586, -873, 323, -922, 183, -1184, 1287, 440, 1390, 1083, 840, 1062, 810, 644, 1157, 410, 1331, 204, 1131, -620, 1106, -782, 129, -537, 547, -447, -118, -501, 1061, -434, 1350, 1297, 1499, 1373, 1526, 1482, -971, 1478, -1006, 1319, 529, 1264, 734, 1175, 953, -933, 280, -650, 551, -664, -1970, 1480, -1973, -1314, -1419, -1307, -1382, -934, -1677, 392, -387, 1, 122, 454, 125, 638, -1107, 582, -1086, 431, -579, 83, 303, 362, -272, -554, -429, -421, -409, -718, -539, -470, 450, 509, -1406, 758, -1236, 1304, -1297, 1470, -1582, 722, -753, 42, -1213, 236, -866, -139, -1402, 197, 198, 725, 159, 860, -1206, 708, 244, 1118, -395, -1054, -717, -445, -1019, -972, -1011, -1298, -844, -356, -1576, 239, -1683, 566, -154, -1202)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2), PackedInt32Array(3, 4, 5, 6, 7, 8), PackedInt32Array(9, 10, 11, 12, 0), PackedInt32Array(13, 1, 14, 15, 16, 17), PackedInt32Array(0, 2, 18, 19, 20), PackedInt32Array(21, 22, 6, 5, 23), PackedInt32Array(24, 19, 18, 8), PackedInt32Array(13, 2, 1), PackedInt32Array(7, 24, 8), PackedInt32Array(25, 26, 27, 28, 29, 30), PackedInt32Array(15, 14, 25, 31), PackedInt32Array(0, 20, 32), PackedInt32Array(33, 11, 10, 34), PackedInt32Array(33, 34, 22, 21), PackedInt32Array(35, 36, 37, 38, 39), PackedInt32Array(40, 41, 42, 43, 44, 45), PackedInt32Array(40, 4, 3, 46), PackedInt32Array(47, 23, 5, 48), PackedInt32Array(49, 47, 48, 50), PackedInt32Array(3, 17, 16, 51, 46), PackedInt32Array(52, 53, 54, 35, 55), PackedInt32Array(40, 46, 41), PackedInt32Array(56, 45, 44, 57), PackedInt32Array(58, 56, 57, 59), PackedInt32Array(43, 42, 60, 61, 62), PackedInt32Array(62, 61, 63, 29, 53, 52), PackedInt32Array(64, 49, 50, 65, 66, 67), PackedInt32Array(68, 58, 59, 69, 38, 66), PackedInt32Array(30, 31, 25), PackedInt32Array(63, 30, 29), PackedInt32Array(70, 55, 35), PackedInt32Array(0, 32, 9), PackedInt32Array(67, 0, 12, 71), PackedInt32Array(67, 71, 64), PackedInt32Array(66, 65, 68), PackedInt32Array(38, 69, 39), PackedInt32Array(35, 39, 70)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-1980, 1491, -1984, -1325, -1410, -1317, -1373, -945, -1029, -981, -1021, -1308, 1532, -1320, 1501, 1053, 1399, 1090, 1361, 1291, 1508, 1366, 1539, 1493, -980, 1488, -1014, 1328, -1229, 1314, -1291, 1480), PackedVector2Array(252, 1111, 529, 1253, 728, 1167, 830, 1058, 800, 651, 445, 518, 301, 374, 132, 460, 135, 634, 210, 724, 169, 860), PackedVector2Array(-1406, 748, -1212, 699, -1117, 578, -1096, 433, -1219, 245, -1402, 207, -1570, 248, -1667, 395, -1673, 563, -1576, 713), PackedVector2Array(-580, 73, -394, -7, -326, -150, -325, -276, -435, -413, -540, -460, -713, -435, -835, -350, -856, -141, -747, 33), PackedVector2Array(-117, -511, 125, -547, 271, -656, 313, -920, 177, -1174, -151, -1192, -385, -1048, -399, -721, -266, -563), PackedVector2Array(885, -333, 1053, -441, 1121, -621, 1097, -777, 949, -923, 765, -921, 595, -865, 561, -663, 557, -453, 705, -369), PackedVector2Array(1165, 402, 1284, 429, 1367, 340, 1324, 214, 1207, 213, 1127, 271)])
source_geometry_group_name = &"navigation_polygon_source_group"

[node name="Level" type="Node2D"]
script = ExtResource("1_fcpeo")

[node name="UI" type="CanvasLayer" parent="."]

[node name="GameOverScreen" parent="UI" instance=ExtResource("6_13elb")]
visible = false

[node name="Background" type="Sprite2D" parent="."]
texture_repeat = 2
texture = ExtResource("2_yf11f")
region_enabled = true
region_rect = Rect2(-1771.46, -1448.88, 8000, 8000)
metadata/_edit_lock_ = true

[node name="Enemy Spawn Master" parent="." instance=ExtResource("3_ftial")]

[node name="Enemy Spawn Point" parent="Enemy Spawn Master" instance=ExtResource("3_31end")]
position = Vector2(1238, 40)

[node name="Enemy Spawn Point3" parent="Enemy Spawn Master" instance=ExtResource("3_31end")]
position = Vector2(-652, 1252)

[node name="Enemy Spawn Point2" parent="Enemy Spawn Master" instance=ExtResource("3_31end")]
position = Vector2(-1712, -1051)

[node name="Player" parent="." instance=ExtResource("1_hdqui")]
position = Vector2(-274, 177)

[node name="Enemies" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="Projectiles" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="Obstacles" type="Node2D" parent="."]

[node name="Wall" parent="Obstacles" instance=ExtResource("3_8wdxp")]
position = Vector2(-2222, 1469)
scale = Vector2(5, 5)

[node name="Wall2" parent="Obstacles" instance=ExtResource("3_8wdxp")]
position = Vector2(-2222, 561)
scale = Vector2(5, 5)

[node name="Wall3" parent="Obstacles" instance=ExtResource("3_8wdxp")]
position = Vector2(-2223, -351)
scale = Vector2(5, 5)

[node name="Wall4" parent="Obstacles" instance=ExtResource("3_8wdxp")]
position = Vector2(-2223, -1264)
scale = Vector2(5, 5)

[node name="Wall9" parent="Obstacles" instance=ExtResource("3_8wdxp")]
position = Vector2(1775, 1458)
scale = Vector2(5, 5)

[node name="Wall10" parent="Obstacles" instance=ExtResource("3_8wdxp")]
position = Vector2(1775, 550)
scale = Vector2(5, 5)

[node name="Wall11" parent="Obstacles" instance=ExtResource("3_8wdxp")]
position = Vector2(1774, -362)
scale = Vector2(5, 5)

[node name="Wall12" parent="Obstacles" instance=ExtResource("3_8wdxp")]
position = Vector2(1774, -1275)
scale = Vector2(5, 5)

[node name="Wall5" parent="Obstacles" instance=ExtResource("3_8wdxp")]
position = Vector2(-1590, -1552)
rotation = 1.5708
scale = Vector2(5, 5)

[node name="Wall6" parent="Obstacles" instance=ExtResource("3_8wdxp")]
position = Vector2(-680, -1552)
rotation = 1.5708
scale = Vector2(5, 5)

[node name="Wall7" parent="Obstacles" instance=ExtResource("3_8wdxp")]
position = Vector2(231, -1552)
rotation = 1.5708
scale = Vector2(5, 5)

[node name="Wall8" parent="Obstacles" instance=ExtResource("3_8wdxp")]
position = Vector2(1141, -1552)
rotation = 1.5708
scale = Vector2(5, 5)

[node name="Wall13" parent="Obstacles" instance=ExtResource("3_8wdxp")]
position = Vector2(-1577, 1738)
rotation = 1.5708
scale = Vector2(5, 5)

[node name="Wall14" parent="Obstacles" instance=ExtResource("3_8wdxp")]
position = Vector2(-667, 1738)
rotation = 1.5708
scale = Vector2(5, 5)

[node name="Wall15" parent="Obstacles" instance=ExtResource("3_8wdxp")]
position = Vector2(244, 1738)
rotation = 1.5708
scale = Vector2(5, 5)

[node name="Wall16" parent="Obstacles" instance=ExtResource("3_8wdxp")]
position = Vector2(1154, 1738)
rotation = 1.5708
scale = Vector2(5, 5)

[node name="PalmTree" parent="Obstacles" instance=ExtResource("9_3yjup")]
position = Vector2(-591, -193)
scale = Vector2(3, 3)

[node name="PalmTree2" parent="Obstacles" instance=ExtResource("9_3yjup")]
position = Vector2(-1387, 473)
rotation = 2.09439
scale = Vector2(3, 3)

[node name="PalmTree3" parent="Obstacles" instance=ExtResource("9_3yjup")]
position = Vector2(834, -638)
rotation = -2.09439
scale = Vector2(3, 3)

[node name="Tree" parent="Obstacles" instance=ExtResource("8_mk5fd")]
position = Vector2(-55, -843)
rotation = 1.57079
scale = Vector2(4.5, 4.5)

[node name="Tree2" parent="Obstacles" instance=ExtResource("8_mk5fd")]
position = Vector2(526, 907)
rotation = 0.261799
scale = Vector2(4.5, 4.5)

[node name="Bush" parent="Obstacles" instance=ExtResource("9_6d12y")]
position = Vector2(255, 535)
rotation = 1.57079
scale = Vector2(2, 2)

[node name="Bush6" parent="Obstacles" instance=ExtResource("9_6d12y")]
position = Vector2(1245, 317)
rotation = -0.523598
scale = Vector2(2, 2)

[node name="Bush7" parent="Obstacles" instance=ExtResource("9_6d12y")]
position = Vector2(1519, 1194)
rotation = 2.35619
scale = Vector2(2, 2)

[node name="Bush3" parent="Obstacles" instance=ExtResource("9_6d12y")]
position = Vector2(-1258, -1245)
rotation = -2.37888
scale = Vector2(2, 2)

[node name="Bush4" parent="Obstacles" instance=ExtResource("9_6d12y")]
position = Vector2(-1152, -1165)
rotation = -5.23598
scale = Vector2(2, 2)

[node name="Bush5" parent="Obstacles" instance=ExtResource("9_6d12y")]
position = Vector2(-1264, -1110)
rotation = -3.66519
scale = Vector2(2, 2)

[node name="Bush2" parent="Obstacles" instance=ExtResource("9_6d12y")]
position = Vector2(-1136, 1468)
scale = Vector2(2, 2)

[node name="Enemy Collection" parent="." instance=ExtResource("6_bw2uf")]
metadata/_edit_lock_ = true

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
navigation_polygon = SubResource("NavigationPolygon_gubfn")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_xqn57")
volume_db = -15.0
autoplay = true

[connection signal="spawn_new_enemy" from="Enemy Spawn Master" to="." method="_on_enemy_spawn_master_spawn_new_enemy"]
[connection signal="win_game" from="Enemy Spawn Master" to="." method="_on_enemy_spawn_master_win_game"]
[connection signal="player_attack_fired" from="Player" to="." method="_on_player_player_attack_fired"]
[connection signal="player_died" from="Player" to="." method="_on_player_player_died"]
